web/wp-content/themes/lfevents/src/assets/scss/global/_gutenberg.scss
/*
Frontend styles for gutenberg blocks
*/

/** === Base Color Palatte === */
@each $color, $code in $foundation-palette {

	.has-#{$color}-background-color {
		background-color: $code;
	}

	.has-#{$color}-color {
		color: $code;
	}
}

/** === Button === */
.wp-block-button {

	// add general foundation button styling
	.wp-block-button__link {
		@extend .button;
		@each $color, $code in $foundation-palette {

			&.has-#{$color}-background-color {
					background-color: $code;
			}

			&.has-#{$color}-color {
					color: $code;
			}
		}
	}

	// add special styling for squared buttons
	&.is-style-squared .wp-block-button__link {
		border-radius: 0 !important;
	}

	// add outline styles
	&.is-style-outline .wp-block-button__link{
		@extend .hollow;
	}

	// set transparent background to block for outline button
	&.is-style-outline,
	&.is-style-outline:hover,
	&.is-style-outline:focus,
	&.is-style-outline:active {
		// background: transparent;
		.wp-block-button__link{
			// background: transparent;
		}
	}

	@each $name, $size in $button-sizes {
		&.#{$name} .wp-block-button__link {
			font-size: $size;
		}
	}
	&.xlarge .wp-block-button__link {
		font-size: 2rem;
	}

	&.expanded,
	&.expanded .wp-block-button__link {
		width: 100%;
	}
}

/** === File === */
.wp-block-file .wp-block-file__button{
	@include button();
	border-radius: rem-calc(8);
	box-shadow: 0 0.25em 0 0 rgba(0,0,0,0.1);
}

/** === Align Wide/Full === */
.entry-content > *,
.entry-summary > *,
.entry-header > *,
.entry-footer > * {
	margin-left: auto;
	margin-right: auto;
	max-width: map-deep-get($breakpoints, xlarge);

	&.alignfull {
		clear: both;
		max-width: none;
		width: calc(100% + 1.25rem);
		margin-right: -0.625rem;
		margin-left: -0.625rem;
		padding-right: rem-calc(10);
		padding-left: rem-calc(10);

		// Flush align all the sections!!!
		& { margin-bottom: 1.5rem !important; }
		& + .alignfull { margin-top: -1.5rem !important; }

		.alignwide {
			padding-right: 0;
			padding-left: 0;
		}
	}
}

.alignwide {
	margin-left: auto;
	margin-right: auto;
	max-width: map-deep-get($breakpoints, xlarge);
}

.ugb-container__wrapper > .ugb-container__content-wrapper > .ugb-container--height-short {
	padding-top: 0;
	padding-bottom: 0;
}

